--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,11 @@
 version: 2.1
 orbs:
   node: circleci/node@3.0.0
-  shellcheck: circleci/shellcheck@2.2.2
+  # shellcheck: circleci/shellcheck@2.2.2
 workflows:
   node-tests:
     jobs:
       - node/test
+store_test_results:
+    path: test-results
+
