--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,7 @@
 version: 2.1
 orbs:
   node: circleci/node@3.0.0
+  slack: circleci/slack@4.3.0
   # shellcheck: circleci/shellcheck@2.2.2
 workflows:
   node-tests:
